--- a/html/regist.html
+++ b/html/regist.html
@@ -26,32 +26,32 @@
 </head>
 <body>
 	<div class="container">
-            <form class="form-horizontal" role="form" action="add.php" method="post" >
+            <form class="form-horizontal" role="form" >
                 <h2 style="color: white;">Registration</h2>
                 <div class=" col-sm-6 form-group aa">
                     <label for="firstName " class="col-sm-3 control-label ">First Name</label>
                     <div class="col-sm-3 ">
-                        <input type="text" name="first" id="firstName" placeholder="First Name" class="form-control" autofocus>
+                        <input type="text" id="firstName" placeholder="First Name" class="form-control" autofocus>
                     </div>
                 </div>
                 <div class="col-sm-6 form-group aa ">
                     <label for="lastName" class="col-sm-3 control-label ">Last Name</label>
                     <div class="col-sm-3 ">
-                        <input type="text" id="lastName" name="last" placeholder="Last Name" class="form-control" autofocus>
+                        <input type="text" id="lastName" placeholder="Last Name" class="form-control" autofocus>
                     </div>
                 </div>
                
                 <div class="col-sm-12 form-group x">
                     <label for="email" class="col-sm-3 control-label">Email* </label>
                     <div class="col-sm-3">
-                        <input type="email" id="email" name="email" placeholder="Email" class="col-sm-3 form-control" name= "email">
+                        <input type="email" id="email" placeholder="Email" class="col-sm-3 form-control" name= "email">
                     </div>
                 </div>
 
                 <div class="col-sm-12 form-group pass">
                     <label for="email" class="col-sm-3 control-label">Password* </label>
                     <div class="col-sm-3">
-                        <input type="password" id="password" name="password" placeholder="Password" class="col-sm-3 form-control" >
+                        <input type="password" id="password" placeholder="Password" class="col-sm-3 form-control" >
                     </div>
                 </div>
                 
@@ -70,7 +70,7 @@
                 <div class="col-sm-6 form-group phone1">
                     <label for="phoneNumber" class="col-sm-3 control-label">Phone number </label>
                     <div class="col-sm-9">
-                        <input type="phoneNumber" id="phoneNumber" name="phone" placeholder="Phone number" class="form-control">
+                        <input type="phoneNumber" id="phoneNumber" placeholder="Phone number" class="form-control">
                         <br>
                         <span class="help-block" style="margin-top: 2%;padding: 10px;">Your phone number won't be disclosed anywhere </span>
                     </div>
